<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <TextView
        android:id="@+id/creator"
        android:layout_width="100dp"
        android:layout_height="53dp"
        android:layout_below="@+id/IntroImage"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="146dp"
        android:layout_marginEnd="0dp"
        android:gravity="center"
        android:text="@string/creator_name"
        android:textColor="@color/pianoBlack"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/courseClass"
        android:layout_width="100dp"
        android:layout_height="53dp"
        android:layout_below="@+id/creator"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/course_class"
        android:textColor="@color/pianoBlack"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/courseTerm"
        android:layout_width="100dp"
        android:layout_height="53dp"
        android:layout_below="@+id/courseClass"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/course_term"
        android:textColor="@color/pianoBlack"
        android:textSize="26sp" />

    <ImageView
        android:id="@+id/IntroImage"
        android:layout_width="match_parent"
        android:layout_height="271dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/apptitle" />

</RelativeLayout>